--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-  <div style="margin-top:20px;margin-bottom: 20px; margin-left: 10px;margin-right: 10px;">
+  <div class="container">
     <h1>Project Manager</h1>
   <ul class="nav nav-pills nav-justified">
       <li class="active"><a class="nav-link" routerLink="addProject" routerLinkActive="active">Add Project</a></li>
