--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -1,5 +1,7 @@
 <div class="container">        
-        <form #addProjectFrom="ngForm" (ngSubmit)="onAddUserSubmit(addProjectFrom)" class="form-horizontal" >
+        <form #addProjectFrom="ngForm" (ngSubmit)="onAddProjectSubmit(addProjectFrom)" class="form-horizontal" >
+          
+         
           <div class="form-group">
             <label class="control-label col-sm-2" for="project">Project:</label>
             <div class="col-sm-10">
@@ -26,12 +28,38 @@
                     <label class="control-label col-sm-2" for="manager">Manager:</label>
                     <div class="col-sm-10">
                         <div style="float: left;">                                                        
-                            <input type="text" class="form-control" required #manager="ngModel" [(ngModel)]="projectManagementSvc.selectedProject.manager" name="manager" id="manager"  >
+                            <input type="text" readonly class="form-control" required #manager="ngModel" [(ngModel)]="projectManagementSvc.selectedProject.manager" name="manager" id="manager" value="{{projectManagementSvc.selectedProject.manager}}"  >
                         </div>                       
-                          &nbsp;  <input type="button" value="Search">
+                          &nbsp;  <button class="btn btn-primary" (click)="openModal()">Search</button>                         
                     </div>
                         
             </div>                   
+            <hr style="border: 1px solid blue"/>
+          <div>
+            
+            <input type ="text" class="form-control width150"  id="search" name="search" placeholder="Search...">
+            <br/>
+            <span class="left20Right20Margin">Sort</span>
+            <span class="left20Right20Margin"><button type="button" class="btn btn-primary">Start Date</button></span>
+            <span class="left20Right20Margin"><button type="button" class="btn btn-primary">End Date</button></span>
+            <span class="left20Right20Margin"><button type="button" class="btn btn-primary">Priority</button></span>
+            <span class="left20Right20Margin"><button type="button" class="btn btn-primary">Completed</button></span>
+          </div>
+
+<ng-template #mymodal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Bootstrap Modal</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    Here I am!
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Ok</button>
+  </div>
+</ng-template>
         </form>
       </div>
 
