--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -1,5 +1,5 @@
 <div class="container">        
-        <form #addUserFrom="ngForm" (ngSubmit)="onAddUserSubmit(addUserFrom)" class="form-horizontal">
+        <form #addUserForm="ngForm" (ngSubmit)="onAddUserSubmit(addUserForm)" class="form-horizontal">
           <div class="form-group">
             <label class="control-label col-sm-2" for="firstName">First Name:</label>
             <div class="col-sm-10">
