--- a/src/app/components/add-project/add-project.component.html
+++ b/src/app/components/add-project/add-project.component.html
@@ -33,7 +33,10 @@
                           &nbsp;  <button class="btn btn-primary" (click)="openModal()">Search</button>                         
                     </div>
                         
-            </div>                   
+            </div>   
+            <div class="form-group">
+            <button type="submit" class="btn btn-primary">Add Project</button>            
+          </div>
             <hr style="border: 1px solid blue"/>
           <div>
             
