--- a/src/app/components/search-modal/search-modal.component.html
+++ b/src/app/components/search-modal/search-modal.component.html
@@ -1,11 +1,11 @@
 <div class="modal-header">
-    <h4 class="modal-title">{{my_modal_title}}</h4>
+    <h4 class="modal-title">Choose a user</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <p> {{my_modal_content}}</p>
+    <!-- <p> {{my_modal_content}}</p> -->
     <div class="container">
       <!-- <table class="table">
         <thead>
