--- a/src/app/components/search-task/search-task.component.html
+++ b/src/app/components/search-task/search-task.component.html
@@ -1,1 +1,28 @@
-<p>search-task works!</p>
+<div class="modal-header">
+        <h4 class="modal-title">Choose a Task</h4>
+        <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="container">          
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Task Name</th>
+                <th>Task Id</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor = "let item of projectMgmtService.taskList">
+                <td><a (click)="saveManager(item.task_id);">{{item.task}}</a></td>
+                <td>{{item.task_id}}</td>
+              </tr>
+            </tbody>
+          </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="closeUsersModal()">Close</button>
+      </div>
+    
+      
