--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,46 +1,46 @@
-<p>task-list works!</p>
 <div class="container">
-    <h2>Contextual Classes</h2>
-    <p>Contextual classes can be used to color table rows or table cells. The classes that can be used are: .active, .success, .info, .warning, and .danger.</p>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Firstname</th>
-          <th>Lastname</th>
-          <th>Email</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Default</td>
-          <td>Defaultson</td>
-          <td>def@somemail.com</td>
-        </tr>      
-        <tr class="success">
-          <td>Success</td>
-          <td>Doe</td>
-          <td>john@example.com</td>
-        </tr>
-        <tr class="danger">
-          <td>Danger</td>
-          <td>Moe</td>
-          <td>mary@example.com</td>
-        </tr>
-        <tr class="info">
-          <td>Info</td>
-          <td>Dooley</td>
-          <td>july@example.com</td>
-        </tr>
-        <tr class="warning">
-          <td>Warning</td>
-          <td>Refs</td>
-          <td>bo@example.com</td>
-        </tr>
-        <tr class="active">
-          <td>Active</td>
-          <td>Activeson</td>
-          <td>act@example.com</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <form #taskListForm="ngForm" (ngSubmit)="onTaskListSubmit(taskListForm)" class="form-horizontal">
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="project">Project:</label>
+      <div class="col-sm-10">
+        <div style="float: left;">
+            <input type="text" class="form-control width200" required #project="ngModel" [(ngModel)]="projectManagementSvc.selectedProject.project" name="project" id="project">
+        </div>
+      </div>
+      &nbsp; <button class="btn btn-primary" (click)="openProjectModal()">Search</button>
+      &nbsp; <span>Sort Task By :</span>
+      &nbsp; <button class="btn btn-primary">Start Date</button>
+      &nbsp; <button class="btn btn-primary">End Date</button>
+      &nbsp; <button class="btn btn-primary">Priority</button>
+      &nbsp; <button class="btn btn-primary">Completed</button>
+    </div>
+    <div>
+        <hr style="border: 1px solid blue" />
+    </div>
+    <div>
+        <table class="table">
+            <thead>
+              <tr>
+                <th>Task</th>
+                <th>Parent</th>
+                <th>Priority</th>
+                <th>Start</th>
+                <th>End</th>
+                <th></th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let item of _tasks">
+                <td><span>{{item.task}}</span></td>
+                <td><span>{{item.parent_id}}</span></td>
+                <td><span>{{item.priority}}</span></td>
+                <td><span>{{item.start_date | date}}</span></td>
+                <td><span>{{item.end_date | date}}</span></td>
+                <td><button class="btn btn-primary">Edit</button></td>
+                <td><button class="btn btn-secondary">EndTask</button></td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+  </form>
