--- a/src/app/components/search-modal/search-modal.component.html
+++ b/src/app/components/search-modal/search-modal.component.html
@@ -5,49 +5,8 @@
     </button>
   </div>
   <div class="modal-body">
-    <!-- <p> {{my_modal_content}}</p> -->
+    <p style="background-color:blue; color :white; font-weight: bold;">Click on User Name to select</p>
     <div class="container">
-      <!-- <table class="table">
-        <thead>
-          <tr>
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Default</td>
-            <td>Defaultson</td>
-            <td>def@somemail.com</td>
-          </tr>      
-          <tr class="success">
-            <td>Success</td>
-            <td><a (click)="saveManager(my_modal_content);">{{my_modal_content}}</a></td>
-            <td>john@example.com</td>
-          </tr>
-          <tr class="danger">
-            <td>Danger</td>
-            <td>Moe</td>
-            <td>mary@example.com</td>
-          </tr>
-          <tr class="info">
-            <td>Info</td>
-            <td>Dooley</td>
-            <td>july@example.com</td>
-          </tr>
-          <tr class="warning">
-            <td>Warning</td>
-            <td>Refs</td>
-            <td>bo@example.com</td>
-          </tr>
-          <tr class="active">
-            <td>Active</td>
-            <td>Activeson</td>
-            <td>act@example.com</td>
-          </tr>
-        </tbody>
-      </table> -->
       <table class="table">
         <thead>
           <tr>
