--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,46 +1,73 @@
 <div class="container">
-  <form #taskListForm="ngForm" (ngSubmit)="onTaskListSubmit(taskListForm)" class="form-horizontal">
+  <form #addTaskForm="ngForm" class="form-horizontal">
     <div class="form-group">
-        <label class="control-label col-sm-2" for="project">Project:</label>
+      <label class="control-label col-sm-2" for="project">Project:</label>
       <div class="col-sm-10">
         <div style="float: left;">
-            <input type="text" class="form-control width200" required #project="ngModel" [(ngModel)]="projectManagementSvc.selectedProject.project" name="project" id="project">
+          <input type="text" class="form-control width200" #project_id="ngModel" readonly required
+            [(ngModel)]="projectManagementSvc.selectedTask.project_id" name="project_id" id="project_id">
         </div>
       </div>
       &nbsp; <button class="btn btn-primary" (click)="openProjectModal()">Search</button>
       &nbsp; <span>Sort Task By :</span>
-      &nbsp; <button class="btn btn-primary">Start Date</button>
-      &nbsp; <button class="btn btn-primary">End Date</button>
-      &nbsp; <button class="btn btn-primary">Priority</button>
-      &nbsp; <button class="btn btn-primary">Completed</button>
+      &nbsp; <button class="btn btn-primary" (click)="refreshGrid(addTaskForm,'start_date asc')">Start Date</button>
+      &nbsp; <button class="btn btn-primary" (click)="refreshGrid(addTaskForm,'end_date asc')">End Date</button>
+      &nbsp; <button class="btn btn-primary" (click)="refreshGrid(addTaskForm,'priority asc')">Priority</button>
+      &nbsp; <button class="btn btn-primary" (click)="refreshGrid(addTaskForm,'status asc')">Completed</button>
     </div>
     <div>
-        <hr style="border: 1px solid blue" />
+      <hr style="border: 1px solid blue" />
     </div>
     <div>
-        <table class="table">
-            <thead>
-              <tr>
-                <th>Task</th>
-                <th>Parent</th>
-                <th>Priority</th>
-                <th>Start</th>
-                <th>End</th>
-                <th></th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of _tasks">
-                <td><span>{{item.task}}</span></td>
-                <td><span>{{item.parent_id}}</span></td>
-                <td><span>{{item.priority}}</span></td>
-                <td><span>{{item.start_date | date}}</span></td>
-                <td><span>{{item.end_date | date}}</span></td>
-                <td><button class="btn btn-primary">Edit</button></td>
-                <td><button class="btn btn-secondary">EndTask</button></td>
-              </tr>
-            </tbody>
-          </table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Task</th>
+            <th>Parent</th>
+            <th>Priority</th>
+            <th>Start</th>
+            <th>End</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of projectManagementSvc.taskList">
+            <td>
+              {{item.task}}
+            </td>
+            <td>
+              {{item.parent_id}}
+            </td>
+            <td>
+              {{item.priority}}
+            </td>
+            <td>
+              {{item.start_date | date : "MM-dd-yyyy"}}
+            </td>
+            <td>
+              {{item.end_date | date : "MM-dd-yyyy"}}
+            </td>
+            <td>
+              <button class="btn btn-primary" (click)="onEditTask(item.task_id)">Edit</button>
+            </td>
+            <td>
+              <button class="btn btn-secondary" (click)="onEndTask(item.task_id)">End Task</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+    <ng-template #mymodal let-modal>
+      <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Search Project</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Ok</button>
+      </div>
+    </ng-template>
   </form>
+</div>
