--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -5,27 +5,38 @@
       <div class="col-sm-10">
         <div style="float: left;">
           <input type="text" class="form-control width200" readonly required #project_id="ngModel"
-            [(ngModel)]="projectManagementSvc.selectedTask.project_id" name="project_id" id="project_id">
-            <input type="hidden" class="form-control width200" readonly  #task_id="ngModel"
+            [(ngModel)]="projectManagementSvc.selectedTask.project_id" name="project_id" id="project_id"
+            [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addTaskForm.submitted && project_id.invalid }">
+          <input type="hidden" class="form-control width200" readonly #task_id="ngModel"
             [(ngModel)]="projectManagementSvc.selectedTask.task_id" name="task_id" id="task_id">
+          <div *ngIf="!isLoadingAfterUpdate && addTaskForm.submitted && project_id.invalid" class="invalid-details">
+            <div *ngIf="project_id.errors.required">Project is required</div>
+          </div>
         </div>
-      </div>&nbsp; <button class="btn btn-primary" [disabled]="isupdateRoute"  (click)="openProjectModal()">Search</button>
+
+      </div>&nbsp; <button class="btn btn-primary" [disabled]="isupdateRoute"
+        (click)="openProjectModal()">Search</button>
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="task">Task:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control width200" required #task="ngModel"
-          [(ngModel)]="projectManagementSvc.selectedTask.task" name="task" id="task">
-      </div>&nbsp; <input type="checkbox" [disabled]="isupdateRoute" id="checkParentTask" #checkParentTask ngModel name="checkParentTask" (click)="onCheckedChange(checkParentTask.checked,addTaskForm)" > Parent
+          [(ngModel)]="projectManagementSvc.selectedTask.task" name="task" id="task"
+          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addTaskForm.submitted && task.invalid }">
+        <div *ngIf="!isLoadingAfterUpdate && addTaskForm.submitted && task.invalid" class="invalid-details">
+          <div *ngIf="task.errors.required">Task is required</div>
+        </div>
+      </div>&nbsp; <input type="checkbox" [disabled]="isupdateRoute" id="checkParentTask" #checkParentTask ngModel
+        name="checkParentTask" (click)="onCheckedChange(checkParentTask.checked,addTaskForm)"> Parent
       Task
     </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="priority">Priority: </label>
       <div class="col-sm-10">
-        <input type="range" class="form-contro" style="width:300px" min="0" max="30" step="1" required
-          #priority="ngModel" [disabled] ="checkParentTask.checked" [(ngModel)]="projectManagementSvc.selectedTask.priority"
+        <input type="range" class="form-contro" style="width:300px" min="0" max="30" step="1" #priority="ngModel"
+          [disabled]="checkParentTask.checked" [(ngModel)]="projectManagementSvc.selectedTask.priority"
           ng-change="setSliderValue(this.value)" name="priority" id="priority"></div>
       <span style="float:right; margin-right: 340px;">{{projectManagementSvc.selectedTask.priority}}</span>
     </div>
@@ -34,11 +45,12 @@
       <label class="control-label col-sm-2" for="parent_id">Parent Task:</label>
       <div class="col-sm-10">
         <div style="float: left;">
-          <input type="text" readonly class="form-control" required #parent_id="ngModel"
+          <input type="text" readonly class="form-control" #parent_id="ngModel"
             [(ngModel)]="projectManagementSvc.selectedTask.parent_id" name="parent_id" id="parent_id"
             value="{{projectManagementSvc.selectedTask.parent_id}}">
         </div>
-        &nbsp; <button class="btn btn-primary" [disabled] ="checkParentTask.checked" (click)="openTaskModal()">Search</button>
+        &nbsp; <button class="btn btn-primary" [disabled]="checkParentTask.checked"
+          (click)="openTaskModal()">Search</button>
       </div>
 
     </div>
@@ -46,13 +58,13 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="start_date">Start Date:</label>
       &nbsp;
-      <input type="date" class="form-control width200" [disabled]="checkParentTask.checked" required
+      <input type="date" class="form-control width200" [disabled]="checkParentTask.checked" 
         #start_date="ngModel" [(ngModel)]="projectManagementSvc.selectedTask.start_date" name="start_date"
         id="start_date">
       &nbsp;
       <label class="control-label col-sm-2" for="end_date">End Date:</label>
       &nbsp;
-      <input type="date" class="form-control width200" [disabled]="checkParentTask.checked" required #end_date="ngModel"
+      <input type="date" class="form-control width200" [disabled]="checkParentTask.checked"  #end_date="ngModel"
         [(ngModel)]="projectManagementSvc.selectedTask.end_date" name="end_date" id="end_date">
     </div>
 
@@ -60,10 +72,11 @@
       <label class="control-label col-sm-2" for="user_id">User:</label>
       <div class="col-sm-10">
         <div style="float:left">
-          <input type="text" class="form-control width200" readonly required #user_id="ngModel"
+          <input type="text" class="form-control width200" readonly  #user_id="ngModel"
             [(ngModel)]="projectManagementSvc.selectedTask.user_id" name="user_id" id="user_id">
         </div>
-      </div>&nbsp; <button class="btn btn-primary" [disabled] ="checkParentTask.checked ||isupdateRoute" (click)="openUserModal()">Search</button>
+      </div>&nbsp; <button class="btn btn-primary" [disabled]="checkParentTask.checked ||isupdateRoute"
+        (click)="openUserModal()">Search</button>
     </div>
 
     <hr style="border: 1px solid blue" />
@@ -83,7 +96,7 @@
         </button>
       </div>
       <div class="modal-body">
-        
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Ok</button>
