--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -2,7 +2,7 @@
   <form #addUserForm="ngForm" class="form-horizontal">
     <div class="form-group">
       <div class="col-sm-10">
-        <input type="hidden" class="form-control width200" required #user_id="ngModel"
+        <input type="hidden" class="form-control width200" #user_id="ngModel"
           [(ngModel)]="projectManagementSvc.selectedUser.user_id" name="user_id" id="user_id">
       </div>
     </div>
@@ -11,9 +11,9 @@
       <div class="col-sm-10">
         <input type="text" class="form-control width200" required #firstName="ngModel"
           [(ngModel)]="projectManagementSvc.selectedUser.firstName" name="firstName" id="firstName"
-          [ngClass]="{ 'is-invalid': addUserForm.submitted && firstName.invalid }">
+          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addUserForm.submitted && firstName.invalid }">
       </div>
-      <div *ngIf="addUserForm.submitted && firstName.invalid" class="invalid-details">
+      <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && firstName.invalid" class="invalid-details">
         <div *ngIf="firstName.errors.required">First Name is required</div>
       </div>
     </div>
@@ -22,9 +22,9 @@
       <div class="col-sm-10">
         <input type="text" class="form-control width200" required #lastName="ngModel"
           [(ngModel)]="projectManagementSvc.selectedUser.lastName" id="lastName" name="lastName"
-          [ngClass]="{ 'is-invalid': addUserForm.submitted && lastName.invalid }">
+          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate && addUserForm.submitted && lastName.invalid }">
       </div>
-      <div *ngIf="addUserForm.submitted && lastName.invalid" class="invalid-details">
+      <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && lastName.invalid" class="invalid-details">
         <div *ngIf="lastName.errors.required">Last Name is required</div>
       </div>
     </div>
@@ -33,10 +33,10 @@
       <div class="col-sm-10">
         <input type="text" class="form-control width150" required #employee_id="ngModel"
           [(ngModel)]="projectManagementSvc.selectedUser.employee_id" id="employee_id" name="employee_id"
-          [ngClass]="{ 'is-invalid': addUserForm.submitted && employee_id.invalid }">
+          [ngClass]="{ 'is-invalid': !isLoadingAfterUpdate &&  addUserForm.submitted && employee_id.invalid }">
       </div>
-      <div *ngIf="addUserForm.submitted && employee_id.invalid" class="invalid-details">
-        <div *ngIf="employee_id.errors.required">Last Name is required</div>
+      <div *ngIf="!isLoadingAfterUpdate && addUserForm.submitted && employee_id.invalid" class="invalid-details">
+        <div *ngIf="employee_id.errors.required">Employee ID is required</div>
       </div>
     </div>
     <div class="form-group">
